--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:front": "react-scripts start",
-    "start": "npm run build && npm run server:prod",
+    "start": "react-scripts start",
+    "startbuild": "npm run build && npm run server:prod",
     "build": "react-scripts build",
-    "server:dev": "nodemon server.js",
-    "server:prod": "node server.js",
+    "server": "nodemon server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
