--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "startbuild": "npm run build && npm run server:prod",
+    "startbuild": "npm run build && npm run serverbuild",
     "build": "react-scripts build",
     "server": "nodemon server.js",
+    "serverbuild": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
